Criação do endpoint para a buscar todos os pedidos ordenados e correções menores
